# mssql-bridge

./: .gitignore  .mise.toml  Cargo.toml  README.md  build.rs  config.example.toml
.github/workflows/: ci.yml  miri.yml  release.yml
src/: auth.rs  config.rs  error.rs  main.rs  pool.rs  query.rs  server.rs  service.rs
